dev:change: Energy comparison customer guarantee changed to Yes/No, supplier website added, % added to metrics and rank arrow css amended

--- a/libs/dev/energy-comparison.less
+++ b/libs/dev/energy-comparison.less
@@ -194,14 +194,14 @@
 
 .sorttable_sorted:after {
     .icon;
-    content: @i-sort-desc;
+    content: @i-sort-desc!important;
     margin-left: .25em;
     color: @heritage-blue;
 }
 
 .sorttable_sorted_reverse:after {
     .icon;
-    content: @i-sort-asc;
+    content: @i-sort-asc!important;
     margin-left: .25em;
     color: @heritage-blue;
 }
