--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -155,7 +155,7 @@ block content
 
 				p There’s a separate tool for comparing #[a(href="https://energycompare.citizensadvice.org.uk/") energy prices].
 
-		h2 Rating
+		h2 Rating for March - June 2016
 		.flex-row
 			.col-md-8
 				p Click on a supplier’s name to see a breakdown of their score, their contact details and information about billing.
@@ -179,9 +179,9 @@ block content
 					td.service 57.89%
 					td.billing 53.78%
 					td.switching 80.94%
-					td.commitment 3
+					td.commitment Yes
 					//td.rating 3
-					td.rating 4.5
+					td.rating 5
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 2
@@ -190,7 +190,7 @@ block content
 					td.service 67.89%
 					td.billing 56.8%
 					td.switching 100%
-					td.commitment 3
+					td.commitment Yes
 					//td.rating 3.25
 					td.rating 4
 				tr.open-dialog1
@@ -201,7 +201,7 @@ block content
 					td.service 92.67%
 					td.billing 82.34%
 					td.switching 74.68%
-					td.commitment 3
+					td.commitment Yes
 					//td.rating 4
 					td.rating 3
 				tr.open-dialog1
@@ -212,7 +212,7 @@ block content
 					td.service 65.01%
 					td.billing 57.86%
 					td.switching 91.35%
-					td.commitment 0
+					td.commitment No
 					//td.rating 3
 					td.rating 2
 				tr.open-dialog1
@@ -223,7 +223,7 @@ block content
 					td.service 54.67%
 					td.billing 74.67%
 					td.switching 100%
-					td.commitment 3
+					td.commitment Yes
 					//td.rating 3.5
 					td.rating 1
 				tr.open-dialog1
@@ -234,7 +234,7 @@ block content
 					td.service 62.2%
 					td.billing 45.67%
 					td.switching 60.54%
-					td.commitment 3
+					td.commitment Yes
 					td.rating 2.25
 				tr.open-dialog1
 					td.decrease
@@ -244,7 +244,7 @@ block content
 					td.service 85.75%
 					td.billing 49.87%
 					td.switching 96.8%
-					td.commitment 0
+					td.commitment No
 					td.rating 2.5
 				tr.open-dialog1
 					td.decrease
@@ -254,7 +254,7 @@ block content
 					td.service 51.23%
 					td.billing 45.67%
 					td.switching 77.56%
-					td.commitment 3
+					td.commitment Yes
 					td.rating 2.75
 				tr.open-dialog1
 					td.decrease
@@ -264,7 +264,7 @@ block content
 					td.service 74.79%
 					td.billing 23.47%
 					td.switching 98.7%
-					td.commitment 0
+					td.commitment No
 					td.rating 2
 				tr.open-dialog1
 					td.decrease
@@ -274,7 +274,7 @@ block content
 					td.service 66.05%
 					td.billing 61.2%
 					td.switching 58.97%
-					td.commitment 0
+					td.commitment No
 					td.rating 2.25
 				tr.open-dialog1
 					td.increase
@@ -284,7 +284,7 @@ block content
 					td.service 53.3%
 					td.billing 61.5%
 					td.switching 96.34%
-					td.commitment 3
+					td.commitment Yes
 					td.rating 3.25
 				tr.open-dialog1
 					td.increase
@@ -294,7 +294,7 @@ block content
 					td.service 76.44%
 					td.billing 25.67%
 					td.switching 54.23%
-					td.commitment 3
+					td.commitment Yes
 					td.rating 3.5
 				tr.open-dialog1
 					td.decrease
@@ -304,7 +304,7 @@ block content
 					td.service 30.56%
 					td.billing 72.3%
 					td.switching 97.89%
-					td.commitment 0
+					td.commitment No
 					td.rating 2.5
 				tr.open-dialog1
 					td.increase
@@ -314,7 +314,7 @@ block content
 					td.service 68.79%
 					td.billing 51.64%
 					td.switching 97.4%
-					td.commitment 0
+					td.commitment No
 					td.rating 2.5
 				tr.open-dialog1
 					td.decrease
@@ -324,7 +324,7 @@ block content
 					td.service 42.38%
 					td.billing 80.67%
 					td.switching 82.34%
-					td.commitment 3
+					td.commitment Yes
 					td.rating 2.75
 				tr.open-dialog1
 					td.increase
@@ -334,7 +334,7 @@ block content
 					td.service 71.23%
 					td.billing 67.56%
 					td.switching 40.21%
-					td.commitment 0
+					td.commitment No
 					td.rating 3.25
 				tr.open-dialog1
 					td
@@ -344,7 +344,7 @@ block content
 					td.service 72.45%
 					td.billing 76.45%
 					td.switching 30.45%
-					td.commitment 0
+					td.commitment No
 					td.rating 2.75
 				tr.open-dialog2
 					td(sorttable_customkey="99") -
@@ -362,7 +362,7 @@ block content
 					td.service -
 					td.billing -
 					td.switching -
-					td.commitment 3
+					td.commitment Yes
 					td -
 				tr.open-dialog2
 					td(sorttable_customkey="99") -
@@ -389,7 +389,7 @@ block content
 					td.service -
 					td.billing -
 					td.switching -
-					td.commitment 3
+					td.commitment Yes
 					td -
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
@@ -497,12 +497,12 @@ block content
 									span 5
 							tr
 								th(scope="row") Customers who found contacting suppliers easy
-								td 57.89
+								td 57.89%
 								td.rating
 									span 2
 							tr
 								th(scope="row") Customers who found bills easy to understand
-								td 53.78
+								td 53.78%
 								td.rating
 									span 5
 							tr
@@ -521,6 +521,8 @@ block content
 						| #[strong Telephone:] 0800 0480202
 						br
 						| #[strong Email:] #[a contact@suppliera.co.uk]
+						br
+						| #[strong Website:] #[a www.suppliera.co.uk]
 						br
 						| #[strong Web Chat:] n/a
 						br
@@ -581,6 +583,8 @@ block content
 						br
 						| #[strong Email:] #[a contact@suppliera.co.uk]
 						br
+						| #[strong Website:] #[a www.suppliera.co.uk]
+						br
 						| #[strong Web Chat:] n/a
 						br
 						| #[strong Ring backs:] n/a
@@ -631,6 +635,8 @@ block content
 						| #[strong Telephone:] 0800 0480202
 						br
 						| #[strong Email:] #[a contact@suppliera.co.uk]
+						br
+						| #[strong Website:] #[a www.suppliera.co.uk]
 						br
 						| #[strong Web Chat:] n/a
 						br
