--- a/libs/jade/dev/digital-labs/labs-2.jade
+++ b/libs/jade/dev/digital-labs/labs-2.jade
@@ -10,8 +10,44 @@ block head
 			background-color: #c2bdde;
 		}
 
+block script
+	script.
+		var filename = window.location.search.slice(1);
+		$(document).ready(function() {
+			$('#mart').click(function(){
+				$('#overlay--3').show();
+			})
+			$('.dialog__close.3').click(function(){
+				$('#overlay--3').hide();
+			})
+		});
+
 block content
 	.digital-lab
+		#overlay--3.overlay(style="display: none;")
+			.overlay__modal
+				.overlay__main(style="background-color: #c2bdde;")
+					div
+						button.dialog__close.3(type="button" data-action="close")
+							i(aria-hidden="true", class="dialog__close-icon")
+							span.dialog__close-text Close
+					.flex-container
+						.flex-row
+							.dl--segment.col-xs-6
+								a(href="http://52.213.57.67/client/budgets/1")
+									.dl--circle
+										.pic £
+									p Try the
+										br
+										strong Money advice recording tool
+							.dl--segment.col-xs-6
+								a(href="http://mart-help.citizensadvice.org.uk/")
+									.dl--circle
+										.pic £
+									p Find out more
+										br
+										strong about MART
+
 		.fullwidth
 			.fullwidth-content
 				.dl--head
@@ -42,7 +78,7 @@ block content
 										| search for the website
 
 						.dl--segment.col-sm-4
-							a(href="#")
+							a(href="https://www.citizensadvice.org.uk/advisernet/news/test-our-new-redundancy-pages-for-advisers-and-the-public/")
 								.dl--circle
 									.pic.i-brand &#xe961;
 								p Give feedback on new
@@ -50,18 +86,18 @@ block content
 									strong redundancy advice content
 
 						.dl--segment.col-sm-4
-							a(href="http://52.209.108.49/client/budgets/1")
+							a#mart(href="#")
 								.dl--circle
 									.pic £
 								p Try the
 									br
-									strong Money Advice Recording Tool
+									strong Money advice recording tool
 
 						.dl--segment.col-sm-4
 							a(href="https://bmis.optimalworkshop.com/optimalsort/75h5l462")
 								.dl--circle
 									.pic.i-brand &#xe971;
-								p Design with
+								p Help us develop
 									br
 									strong Page engine
 										br
