dev:change: Updated copy and links on new digital labs

--- a/libs/jade/dev/digital-labs/labs-2.jade
+++ b/libs/jade/dev/digital-labs/labs-2.jade
@@ -99,7 +99,7 @@ block content
 									.pic.i-brand &#xe971;
 								p Help us develop
 									br
-									strong Page engine
+									strong PageEngine
 										br
 										| (the new Prinkk)
 
