dev:change: Energy comparison ordering arrow set to one direction and Template letter labelling changed for demo purposes

--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -167,8 +167,8 @@ block content
 					th.lg-only(scope="col") Complaints
 					th.lg-only(scope="col") Ease of contact
 					th.lg-only(scope="col") Bill clarity
-					th.lg-only(scope="col") Switching
-					th.lg-only(scope="col") Customer guarantees
+					th.lg-only(scope="col") Ease of switching
+					th.lg-only(scope="col") Switch Guarantee
 					th.col-rate(scope="col") Rating of 5
 			tbody
 				tr.open-dialog1
@@ -177,7 +177,7 @@ block content
 					td Supplier A
 					td.complaints 40.6
 					td.service 57.89%
-					td.billing 53.78%
+					td.billing 23.78%
 					td.switching 80.94%
 					td.commitment Yes
 					//td.rating 3
