--- a/libs/jade/dev/template-letter/tool/admin-3.jade
+++ b/libs/jade/dev/template-letter/tool/admin-3.jade
@@ -31,7 +31,7 @@ block content
                         label(for="standardField") Template letter name
                         input(placeholder="", type="text")
 
-                a.blocklink.moveme(href="admin-5.html", style="padding-top:.75rem;") Personal details (3 questions)
+                a.blocklink.moveme(href="admin-5.html", style="padding-top:.75rem;") About your purchase
 
                 a.blocklink.moveme untitled section (0 questions)
 
