--- a/libs/jade/dev/template-letter/tool/admin-7.jade
+++ b/libs/jade/dev/template-letter/tool/admin-7.jade
@@ -30,7 +30,7 @@ block content
     .articleContent
         .flex-container.flex-row
             .col-md-6
-                a.btn-white.back-button-icon(href="admin-5.html", style="margin-top:0;") Back to "Personal details" section
+                a.btn-white.back-button-icon(href="admin-5.html", style="margin-top:0;") Back to "About your purchase" section
 
                 div
                     h2 Amount (£)
