--- a/libs/jade/dev/template-letter/tool/admin-radio-2.jade
+++ b/libs/jade/dev/template-letter/tool/admin-radio-2.jade
@@ -30,23 +30,23 @@ block content
     .articleContent
         .flex-container.flex-row
             .col-md-6
-                a.btn-white.back-button-icon(href="admin-5.html", style="margin-top:0;") Back to "Personal details" section
+                a.btn-white.back-button-icon(href="admin-5.html", style="margin-top:0;") Back to "About your purchase" section
 
                 div
                     h2 Radio buttons
                     .fieldset
                         label(for="standardField") Question name
-                        input(value="", placeholder="Name your question", type="text")
+                        input(value="", placeholder="Name your question",  type="text")
                     .fieldset
                         label(for="standardField") Question label
                         span.form-hint This will appear in the body of the letter within #[strong {{ }}]. Keep brief and in lower case, words seperated by - or _
-                        input(placeholder="question_label", type="text")
+                        input(placeholder="question_label", type="text" value="asking_for")
                     .fieldset
                         label(for="standardField") Hint text
                         input(placeholder="", type="text")
                     .fieldset
                         label(for="standardField") Error text
-                        input(placeholder="", type="text")
+                        input(placeholder="Please select an option from the list", type="text")
                     .fieldset(style="margin-top:2rem;")
                         label(class="checkbox checkbox--inline") Required
                             input(checked name="checkbox-inline" type="checkbox")
@@ -55,11 +55,11 @@ block content
                         a.tl--option--delete Remove
                         .fieldset
                             label(for="standardField") Option name
-                            input(placeholder="", type="text")
+                            input(placeholder="", type="text" value="Ask for a refund")
                         .fieldset
                             label(for="standardField") Option output
-                            span.form-hint Can include other question labels (include inside {{}} )
-                            textarea(placeholder="", type="text")
+                            span.form-hint Can include other question labels (include labels within {{}} )
+                            textarea(placeholder="", type="text") As there was a problem with the goods when I bought them, I request that you give me a full refund.
                     .well.moveme(style="position:relative")
                         a.tl--option--delete Remove
                         .fieldset
@@ -67,12 +67,12 @@ block content
                             input(placeholder="", type="text")
                         .fieldset
                             label(for="standardField") Option output
-                            span.form-hint Can include other question labels (include inside {{}} )
-                            textarea(placeholder="", type="text")
+                            span.form-hint Can include other question labels (include labels within {{}} )
+                            textarea(placeholder="", type="text") uiyvbliyuvbliyv
                     button.btn.plus-button-icon Add option
 
                 hr
                 button.btn-warning(type="button") Delete this question
 
             .col-md-6
-                textarea#letter-input(style="height:45rem;") {{address}}&#013;&#010;&#013;&#010;Dear Sir or Madam,&#013;&#010;&#013;&#010;I bought a sewing machine from you on 25 October 2015. I paid £229.99.&#013;&#010;&#013;&#010;I now find the goods have the following fault:&#013;&#010;The machine stops working after half an hour and won't work again for at least an hour.&#013;&#010;&#013;&#010;Under the Consumer Rights Act 2015 goods you supply must be fit for purpose. As there was a problem with the goods when I bought them, I request that you give me a full refund.&#013;&#010;&#013;&#010;I have enclosed a copy of the receipt in support of my claim.&#013;&#010;Please respond within 14 days of receiving this letter.&#013;&#010;&#013;&#010;Yours faithfully&#013;&#010;{{name}}&#013;&#010;joe@joeblogs.com
+                textarea#letter-input(style="height:45rem;") {{address}}&#013;&#010;&#013;&#010;Dear Sir or Madam,&#013;&#010;&#013;&#010;I bought a sewing machine from you on 25 October 2015. I paid £229.99.&#013;&#010;&#013;&#010;I now find the goods have the following fault:&#013;&#010;The machine stops working after half an hour and won't work again for at least an hour.&#013;&#010;&#013;&#010;Under the Consumer Rights Act 2015 goods you supply must be fit for purpose. {{asking-for}}&#013;&#010;&#013;&#010;I have enclosed a copy of the receipt in support of my claim.&#013;&#010;Please respond within 14 days of receiving this letter.&#013;&#010;&#013;&#010;Yours faithfully&#013;&#010;{{name}}&#013;&#010;joe@joeblogs.com
