dev:change: Renamed template letter admin pages, linked up to create full mockup and moved to admin folder

--- a/libs/jade/dev/template-letter/admin/admin-section-purchase.jade
+++ b/libs/jade/dev/template-letter/admin/admin-section-purchase.jade
@@ -30,30 +30,36 @@ block content
     .articleContent
         .flex-container.flex-row
             .col-md-6
-                a.btn-white.back-button-icon(href="admin-3.html", style="margin-top:0;") Back to overview
+                a.btn-white.back-button-icon(href="admin-overview.html", style="margin-top:0;") Back to overview
 
                 .well(style="background-color:#F2F8FF;")
                     .fieldset
                         label(for="standardField") Section title
                         input(value="About your purchase", type="text")
 
-                a.blocklink.moveme(href="admin-radio-2.html") What you are asking for
+                a.blocklink.moveme(href="admin-radio-buttons.html") What you are asking for
                     br
                     | {{asking_for}}
                     br
                     small(style="color:black;") Radio buttons
 
-                a.blocklink.moveme(href="admin-7.html") Amount (£)
+                a.blocklink.moveme(href="admin-amount-pounds.html") Amount (£)
                     br
                     | {{item_cost}}
                     br
                     small(style="color:black;") Item cost
 
-                a.blocklink.moveme(href="admin-6.html") Purchase date
+                a.blocklink.moveme(href="admin-date.html") Date of purchase
                     br
                     | {{purchase_date}}
                     br
                     small(style="color:black;") Date field
+
+                a.blocklink.moveme(href="admin-number.html") Number of days
+                    br
+                    | {{days}}
+                    br
+                    small(style="color:black;") Number field
 
 
                 .well
@@ -74,4 +80,4 @@ block content
                 button.btn-warning(type="button") Delete this section
 
             .col-md-6
-                textarea#letter-input(style="height:45rem;") {{address}}&#013;&#010;&#013;&#010;Dear Sir or Madam,&#013;&#010;&#013;&#010;I bought a sewing machine from you on 25 October 2015. I paid £229.99.&#013;&#010;&#013;&#010;I now find the goods have the following fault:&#013;&#010;The machine stops working after half an hour and won't work again for at least an hour.&#013;&#010;&#013;&#010;Under the Consumer Rights Act 2015 goods you supply must be fit for purpose. As there was a problem with the goods when I bought them, I request that you give me a full refund.&#013;&#010;&#013;&#010;I have enclosed a copy of the receipt in support of my claim.&#013;&#010;Please respond within 14 days of receiving this letter.&#013;&#010;&#013;&#010;Yours faithfully&#013;&#010;{{name}}&#013;&#010;joe@joeblogs.com
+                textarea#letter-input(style="height:45rem;") {{address}}&#013;&#010;&#013;&#010;Dear Sir or Madam,&#013;&#010;&#013;&#010;I bought a sewing machine from you on {{purchase_date}}. I paid {{item_cost}}.&#013;&#010;&#013;&#010;I now find the goods have the following fault:&#013;&#010;The machine stops working after half an hour and won't work again for at least an hour.&#013;&#010;&#013;&#010;Under the Consumer Rights Act 2015 goods you supply must be fit for purpose. {{asking_for}}&#013;&#010;&#013;&#010;I have enclosed a copy of the receipt in support of my claim.&#013;&#010;Please respond within {{days}} days of receiving this letter.&#013;&#010;&#013;&#010;Yours faithfully&#013;&#010;{{name}}&#013;&#010;{{email}}&#013;&#010;{{phone}}
