--- a/libs/jade/dev/template-letter/admin/admin-overview.jade
+++ b/libs/jade/dev/template-letter/admin/admin-overview.jade
@@ -30,10 +30,13 @@ block content
                     .fieldset
                         label(for="standardField") Template letter name
                         input(placeholder="", type="text" value="Faulty goods letter")
+                    .fieldset
+                        label(for="standardField") Template letter intro
+                        textarea
 
-                a.blocklink.moveme(href="admin-section-details.html", style="padding-top:.75rem;") Personal details
+                a.blocklink.moveme(href="admin-section-details.html", style="padding-top:.75rem;") Personal details (4 questions)
 
-                a.blocklink.moveme(href="admin-section-purchase.html") About your purchase
+                a.blocklink.moveme(href="admin-section-purchase.html") About your purchase (4 questions)
 
                 a.blocklink.moveme untitled section (0 questions)
 
