--- a/libs/jade/dev/template-letter/admin/admin-section-details.jade
+++ b/libs/jade/dev/template-letter/admin/admin-section-details.jade
@@ -36,6 +36,9 @@ block content
                     .fieldset
                         label(for="standardField") Section title
                         input(value="Personal details", type="text")
+                    .fieldset
+                        label(for="standardField") Section intro
+                        textarea
 
                 a.blocklink.moveme(href="admin-text-field.html") Name
                     br
