--- a/libs/jade/dev/template-letter/admin/admin-section-purchase.jade
+++ b/libs/jade/dev/template-letter/admin/admin-section-purchase.jade
@@ -36,6 +36,9 @@ block content
                     .fieldset
                         label(for="standardField") Section title
                         input(value="About your purchase", type="text")
+                    .fieldset
+                        label(for="standardField") Section intro
+                        textarea
 
                 a.blocklink.moveme(href="admin-radio-buttons.html") What you are asking for
                     br
