--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -97,43 +97,69 @@ block script
 				}
 			})
 
-			$(".commitment").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score == 0) {
-					$(this);
-				} else if (score > 0 && score <= 1) {
-					$(this).html(1);
-				} else if (score > 1 && score <= 2) {
-					$(this).html(2);
-				} else if (score > 2 && score <= 3) {
-					$(this).html(3);
-				} else if (score > 3 && score <= 4) {
-					$(this).html(4);
-				} else if (score > 4) {
-					$(this).html(5);
-				}
-			})
-
 			$(".rating").each(function() {
 				var score = parseFloat($(this).text());
 				if (score > 0 && score <= 1) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-10.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-10.svg">');
 				} else if (score > 1 && score <= 2) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-20.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-20.svg">');
 				} else if (score > 2 && score <= 2.5) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-25.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-25.svg">');
 				} else if (score > 2.5 && score <= 3) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-30.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-30.svg">');
 				} else if (score > 3 && score <= 3.5) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-35.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-35.svg">');
 				} else if (score > 3.5 && score <= 4) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-40.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-40.svg">');
 				} else if (score > 4 && score <= 4.5) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-45.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-45.svg">');
 				} else if (score > 4.5 && score <= 5) {
-					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-50.svg">');
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/energy-comparison/rating-50.svg">');
 				}
 			})
+
+			/*$(".complaints, .service, .billing, .switching").each(function() {
+				var score = parseFloat($(this).text());
+				if (score > 0 && score <= 1) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 1 && score <= 2) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 2 && score <= 2.5) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 2.5 && score <= 3) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 3 && score <= 3.5) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 3.5 && score <= 4) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 4 && score <= 4.5) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				} else if (score > 4.5 && score <= 5) {
+					$(this).append('<span style="color:#808080;font-weight:normal"> stars</span>');
+				}
+			})*/
+
+			$(".complaints, .service, .billing, .switching").each(function() {
+				var score = parseFloat($(this).text());
+				if (score > 0 && score <= 1) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-10.svg">');
+				} else if (score > 1 && score <= 2) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-20.svg">');
+				} else if (score > 2 && score <= 2.5) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-25.svg">');
+				} else if (score > 2.5 && score <= 3) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-30.svg">');
+				} else if (score > 3 && score <= 3.5) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-35.svg">');
+				} else if (score > 3.5 && score <= 4) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-40.svg">');
+				} else if (score > 4 && score <= 4.5) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-45.svg">');
+				} else if (score > 4.5 && score <= 5) {
+					$(this).append('<br><img style="max-height:.6rem;" src="#{dir}/images/energy-comparison/rating-50.svg">');
+				}
+			})
+
 		});
 
 block content
@@ -153,7 +179,7 @@ block content
 				.callout--alert
 					p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
 
-				p There’s a separate tool for comparing #[a(href="https://energycompare.citizensadvice.org.uk/") energy prices].
+				p #[a.blocklink(href="https://energycompare.citizensadvice.org.uk/") There’s a separate tool for comparing energy prices.]
 
 		h2 Rating for March - June 2016
 		.flex-row
@@ -162,14 +188,14 @@ block content
 		table.sortable.energy-comparison
 			thead
 				tr
-					th.col-rank.sorttable_numeric(scope="col") Rank
+					th.col-rank.sorttable_numeric.sorttable_sorted_reverse(scope="col") Rank
 					th.col-supp(scope="col") Supplier
 					th.lg-only(scope="col") Complaints
 					th.lg-only(scope="col") Ease of contact
 					th.lg-only(scope="col") Bill clarity
 					th.lg-only(scope="col") Ease of switching
 					th.lg-only(scope="col") Switch Guarantee
-					th.col-rate(scope="col") Rating of 5
+					th.col-rate(scope="col") Overall rating
 			tbody
 				tr.open-dialog1
 					td.increase
@@ -484,7 +510,7 @@ block content
 			.dialog(role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" style="z-index: 3;")
 
 				header.dialog__header
-					h2#dialog-1-label.dialog__title Supplier A
+					h2#dialog-1-label.dialog__title Supplier A, March - June 2016
 					button.dialog__close.1(type="button" data-action="close")<i aria-hidden="true" class="dialog__close-icon"></i><span class="dialog__close-text">Close</span>
 
 				.dialog__main#dialog-1-main
@@ -512,9 +538,14 @@ block content
 									span 3
 							tr
 								th(scope="row") Customer guarantees
-								td Signed to switching guarantee#[br]Not signed to billing code
+								td Signed to #[a(href="https://www.energyswitchguarantee.com/") Energy Switch Guarantee]
+									img.switch-logo(src="#{dir}/images/energy-comparison/energy-switch-guarantee-logo.jpg", alt="Energy Switch Guarantee")
 								td.rating
 									span 4
+							tr
+								th(scope="row") Overall rating
+								td(colspan="2").rating
+									span 5
 					a.blocklink(href="comparison-details.html") How the scores are worked out
 					h3 Contact information
 					p
