dev:fix: Removed bolding from energy comparison table

--- a/libs/dev/energy-comparison.less
+++ b/libs/dev/energy-comparison.less
@@ -76,7 +76,7 @@
     .commitment {
         display: none;
         color: @heritage-blue;
-        font-weight: @font-weight-bold;
+        //font-weight: @font-weight-bold;
         @media screen and (min-width: @breakpoint-md) {
             display: table-cell;
             width: 11%;
