dev:add: created intercept survey folder and page

--- a/libs/jade/dev/campaigns/campaign-page.jade
+++ b/libs/jade/dev/campaigns/campaign-page.jade
@@ -15,6 +15,8 @@ block content
 	.articleContent
 		.flex-row
 			.col-12
+
+			.col-12
 				p #[strong “We design content and tools to help the most vulnerable in society - who face increasing problems in today&#39;s world.”]
 
 				p That’s what one person said when we asked our digital team what it’s like to work at Citizens Advice recently, and it sums up why we think the team is so special. Our work can make a real difference to people at difficult times in their lives. We help people solve problems - and, as another person put it, we are “doing something with a positive social purpose, not just aimed at achieving more traffic or selling things.”
@@ -55,6 +57,9 @@ block content
 					.i-brand &#xe993;
 					h3 20.7m
 					p people assisted via our website
+				.fullwidth-blue
+					p xxxxxx
+					p xxxx
 
 
 		.flex-row
